--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/7a52e9e5f1.js" crossorigin="anonymous"></script>
+
+    <title>Work it Home</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <nav class="navbar">
+        <div class="logo">
+            <h1>WorkIT</h1>
+        </div>
+            <div class="icon-container">
+                <i class="icon fa fa-2x fa-bars "></i>                
+            </div>
+        <div class="container active">
+            <div class="navicon">
+                <i class="fa-solid fa-house fa-2x"></i>
+            </div>
+            <div class="text" style="padding-left: 13%">
+                <a href="#" class="link">Home</a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="navicon" >
+                <i class="fa-solid fa-lock fa-2x" ></i>
+            </div>
+            <div class="text">
+                <a href="#" class="link">Secured</a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="navicon">
+                <i class="fa fa-circle-info fa-2x"></i>
+            </div>
+            <div class="text">
+                <a href="#" class="link">About</a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="navicon">
+                <i class="fa fa-message fa-2x"></i>
+            </div>
+            <div class="text" >
+                <a href="#" class="link">Connect</a>
+            </div>
+        </div>
+    </nav>
+    <div class="content">
+        <h1>hello world</h1>
+
+    </div>
 </body>
 </html>
