Third commit updates on sidebar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,44 @@
     <title>Work it Home</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbari">
+
+        <div class="logo" id="w">
+            <h1>W</h1>
+        </div>
+        <div class="icons">
+            <div class="iconcontainer">
+                <i class="fa-solid fa-house fa-2x"></i>
+            </div>
+            <div class="iconcontainer">
+                <i class=" fa-solid fa-lock fa-2x" ></i>
+            </div>
+            <div class=" active iconcontainer">
+                <i class=" fa fa-circle-info fa-2x"></i>
+            </div>
+            <div class="iconcontainer">
+                <i class=" fa fa-message fa-2x"></i>
+            </div>
+            <div class="iconcontainerbtn">
+                <div  id="toggle" onclick="myfunc()"><i class=" fa fa-2x fa-bars "></i></div>
+            </div>
+        </div>
+
+    </nav>
+
+        <nav id="navbart" style="border: 0px;">
+            <div class=" logot"> 
+                <h1 class="logotext">WorkIT</h1>
+            </div>
+            <div class="links">
+                <div class="text">Home</div>
+                <div class="text">Secured</div>
+                <div class="active text">About</div>
+                <div class="text">Connect</div>
+            </div>
+
+        </nav>
+    <!-- <nav class="navbar">
         <div class="logo">
             <h1>WorkIT</h1>
         </div>
@@ -50,10 +87,11 @@
                 <a href="#" class="link">Connect</a>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <div class="content">
         <h1>hello world</h1>
 
     </div>
+    <script src="navbar.js"></script>
 </body>
 </html>
