--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,31 +8,9 @@ body{
     background-color: rgb(3, 16, 65);
     color: aliceblue;
 }
-
-.navbar{
-    position: fixed;
-    width: 300px;
-    height:100%;
-    background-color: rgb(14, 1, 42);
-
-}
-
-.logo{
-    font-size: 1.7rem;
-    text-align: center;
-    color: black;
-    background-color: aliceblue;
-    padding:20% 0%;
-}
 .content{
     text-align: center;
-    margin-left:300px;
-}
-.icon-container{
-    margin: 10% 40%;
-    border: 2px solid ;
-    text-align: center;
-    cursor: pointer;
+    margin-left:20%;
 }
 .icon{
     padding: 10px 0px;
@@ -64,4 +42,70 @@ body{
     padding: 5% 0%;
     width:300px;
     display: flex;
+}
+.navbari{
+    position: fixed;
+    height: 100%;
+    width: 5%;
+    background-color: rgb(14, 1, 42);
+}
+
+.iconcontainer{
+    color: aliceblue;
+    text-align: center;
+    padding: 40% 0%;
+    
+}
+.iconcontainerbtn{
+    padding: 40% 0%;
+    text-align: center;
+    
+}
+.iconcontainerbtn:hover{
+    background-color: rgb(82, 13, 230);
+    cursor: pointer;
+    transition: 0.2s;
+    
+}
+
+
+#navbart{
+    position: fixed;
+    overflow: hidden;
+    width: 0%;
+    height: 100%;
+    margin-left: 5%;
+    background-color: rgb(14, 1, 42);
+    transition: 0.3s;
+}
+
+.text{
+    text-align: left;
+    font-size: 1.6rem ;
+    padding: 14% 0%;
+    padding-left: 15%;
+    color: white;
+}
+.logo{
+    text-align: center;
+    font-size: 1.7rem;
+    color: black;
+    padding: 70% 0%;
+    background-color: aliceblue;
+    transition: 0.2s;
+}
+
+.logot{
+    font-size: 2rem;
+    height: 20.9%;
+    width: 100%;
+    text-align: center;
+    color: black;
+    background-color: aliceblue;
+
+}
+.logotext{
+    padding-top: 20%;
+    padding-right: 20%;
+    padding-left: 0%;
 }
