--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,8 +29,8 @@
             <div class="iconcontainer">
                 <i class=" fa fa-message fa-2x"></i>
             </div>
-            <div class="iconcontainerbtn">
-                <div  id="toggle" onclick="myfunc()"><i class=" fa fa-2x fa-bars "></i></div>
+            <div class="iconcontainerbtn" id="togglecontainer" onclick="myfunc()">
+                <div  id="toggle"><i class=" fa fa-2x fa-bars "></i></div>
             </div>
         </div>
 
