--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,9 @@
         </div>
     </nav> -->
     <div class="content">
-        <h1>hello world</h1>
+        <h1><%=City%></h1>
+        <h1 class="weatherheader"><%= Weather %></h1>
+        <img src="<%=icon%>" class="weatherimage" alt="icon">
 
     </div>
     <script src="navbar.js"></script>
